# solar-eclipse

./: TODO.md  justfile  meson.build
bin_src/solarmain-9.0.1/src/: ccsearch.cc  genetic_correlation.cc  gwas.cc  pedigree.cc  pedigree_power.cc  print_phi2.cc  solar.cc  tablefile.h
bin_src/third-party-bins/ibd-src-large/: ibdprep.c
lib/: solar.tcl
subprojects/: meson.build
subprojects/libRicVolume/: meson.build
subprojects/libRicVolume/src/: meson.build
subprojects/libplinkio/: meson.build
subprojects/libplinkio/src/: meson.build
subprojects/libsafe/: meson.build
subprojects/libsafe/src/: meson.build
subprojects/libtcl8.4/: meson.build
subprojects/libtcl8.4/unix/: meson.build
